Portfolio, erickariasec.github.io, buttons: changing color for a correct contrast ratio

--- a/css/style.css
+++ b/css/style.css
@@ -131,7 +131,7 @@ html {
 .home .home-content a {
     display: inline-block;
     background: #0d86cb;
-    color: #fff;
+    color: #000;
     font-size: 25px;
     padding: 12px 36px;
     margin-top: 20px;
@@ -220,7 +220,7 @@ section .title::after {
 .about .about-content .right a {
     display: inline-block;
     background: #0d86cb;
-    color: #fff;
+    color: #000;
     font-size: 20px;
     font-weight: 500;
     padding: 10px 30px;
@@ -298,7 +298,7 @@ section .title::after {
 .skills .skills-content .left a {
     display: inline-block;
     background: #0d86cb;
-    color: #fff;
+    color: #000;
     font-size: 18px;
     font-weight: 500;
     padding: 8px 16px;
@@ -495,7 +495,7 @@ button.owl-dot.active {
     width: 100%;
     border: 2px solid #0d86cb;
     background: #0d86cb;
-    color: #fff;
+    color: #000;
     font-size: 20px;
     font-weight: 500;
     border-radius: 6px;
